syntax = "proto3";

package user;
import "google/protobuf/empty.proto";

service UserService{
  rpc searchUser(UserSearchRequest) returns (UserSearchResponse);
  rpc currentUser(google.protobuf.Empty) returns (UserResponse);
  rpc findById(UserByIdRequest) returns (UserResponse);
  rpc findByEmail(UserByEmailRequest) returns (UserResponse);
}


message UserByIdRequest{
  string Id = 1;
}

message UserByEmailRequest{
  string email = 1;
}

message UserSearchRequest{
  string query = 1;
}

message UserSearchResponse{
  repeated UserResponse users = 1;
}

message UserResponse{
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  int32 partyId = 5;
  int32 phone = 6;
}